--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
      <title>Claim</title>
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-     <link rel="stylesheet" type="text/css" href="./custom.css" />
-    <link rel="stylesheet" type="text/css" href="./style.css"/>
-    <!-- <script src="https://download.agora.io/sdk/release/AgoraRTC_N-4.8.1.js"></script>
-    <script src="./basicVideoCall.js"/> -->
-
-    <!-- <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script> -->
+     <link rel="stylesheet" type="text/css" href="./styles/custom.css" />
+    <link rel="stylesheet" type="text/css" href="./styles/style.css"/>
 
   
 </head>
@@ -19,8 +15,6 @@
 </style>
 <!-- End of Commented stylesheet -->
 
-<script type="text/javascript" src="./jquery-3.6.0.min.js"></script>
-<script type="text/javascript" src="./bootstrap.min.js"></script> 
 
 
 <body style="background-color:#eee;">
