--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
 
 <body style="background-color:#eee;">
+
+  
+
   <div class="progress">
     <div class="indeterminate"></div>
 </div>
@@ -115,9 +118,12 @@
           <video id="real_remote_video"  muted autoplay></video>
 
         <div class="call-container-main">
+
+          <div id="dialog">
             <div class="call-container" id="call_video">
                 <ion-icon name="call"></ion-icon>
             </div>
+          </div>
 
             <!-- <div class="call-container-stop">
                 <ion-icon name="stop"></ion-icon>
@@ -144,7 +150,9 @@
 <!-- <video id="real_local_video" muted autoplay></video> -->
 <!-- <video  id="real_remote_video" autoplay muted></video> -->
 <!-- <button id="call_video">video</button> -->
-<div id="dialog"></div>
+
+<!-- <div id="dialog"></div> -->
+
 </div>
 
 <div class="acceptContainer">
